--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,17 @@
 
         />
 
+    <Button
+        android:layout_marginTop="5dp"
+        android:id="@+id/HelpHomeId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Help"
+        android:textSize="20dp"
 
-
+        />
     
+
+
 
 </LinearLayout>
