--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,18 @@
         android:textSize="20dp"
 
         />
-    
+
+
+    <Button
+        android:layout_marginTop="5dp"
+        android:id="@+id/AccountSettingHomeId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Account Setting"
+        android:textSize="20dp"
+
+        />
+
 
 
 
