--- a/app/src/main/res/layout/activity_chittagong_district.xml
+++ b/app/src/main/res/layout/activity_chittagong_district.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nano.projectjonobak.DivisionList">
+    tools:context="com.nano.projectjonobak.divisions.ChittagongDistrict">
 
     <LinearLayout
         android:orientation="vertical"
@@ -12,38 +12,62 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="80dp">
 
             <TextView
+
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:text="Divisions"
-                android:textColor="#0e0e0e"
-                android:textSize="25dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="15dp"
-                />
+                android:layout_weight="1"
+                android:text="Chittagong Division"
+                android:textColor="#0b0b0b"
+                android:textSize="25dp" />
+
 
         </LinearLayout>
 
-
         <Button
-            android:id="@+id/BarisalDivisionId"
+            android:id="@+id/BandarbanDistrictId"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
             android:layout_weight="1"
-            android:text="Barisal"
+            android:text="Bandarban"
             android:textSize="20dp"
 
             />
 
         <Button
-            android:id="@+id/ChittagongDivisionId"
+            android:id="@+id/BrahmanbariaDistrictId"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="Brahmanbaria"
+            android:textSize="20dp"
+
+            />
+
+        <Button
+            android:id="@+id/ChandpurDistrictId"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="Chandpur"
+            android:textSize="20dp"
+
+            />
+
+        <Button
+            android:id="@+id/ChittagongDistrictId"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:text="Chittagong"
             android:textSize="20dp"
@@ -51,68 +75,84 @@
             />
 
         <Button
-            android:layout_weight="1"
-            android:layout_marginTop="5dp"
-            android:id="@+id/DhakaDivisionId"
+            android:id="@+id/ComillaDistrictId"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="Dhaka"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="Comilla"
             android:textSize="20dp"
 
             />
 
         <Button
-            android:id="@+id/KhulnaDivisionId"
+            android:id="@+id/CoxsBazarDistrictId"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
             android:layout_weight="1"
-            android:text="Khulna"
+            android:text="Cox's Bazar"
             android:textSize="20dp"
 
             />
 
         <Button
-            android:id="@+id/MymensinghDivisionId"
+            android:id="@+id/FeniDistrictId"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
             android:layout_weight="1"
-            android:text="Mymensingh"
-            android:textSize="20dp" />
-
-        <Button
-            android:id="@+id/RajshahiDivisionId"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:text="Rajshahi"
+            android:text="Feni"
             android:textSize="20dp"
 
             />
 
         <Button
-            android:layout_weight="1"
-            android:layout_marginTop="5dp"
-            android:id="@+id/RangpurDivisionId"
+            android:id="@+id/KhagrachhariDistrictId"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="Rangpur"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="Khagrachhari"
             android:textSize="20dp"
 
             />
 
         <Button
-            android:layout_weight="1"
-            android:layout_marginTop="5dp"
-            android:id="@+id/SylhetDivisionId"
+            android:id="@+id/LakshmipurDistrictId"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="Sylhet"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="Lakshmipur"
             android:textSize="20dp"
 
             />
+
+        <Button
+            android:id="@+id/NoakhaliDistrictId"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="Noakhali"
+            android:textSize="20dp"
+
+            />
+
+        <Button
+            android:id="@+id/RangamatiDistrictId"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="Rangamati"
+            android:textSize="20dp"
+
+            />
+
+
+
 
     </LinearLayout>
 
