--- a/app/src/main/res/layout/activity_bogra_rajshahi.xml
+++ b/app/src/main/res/layout/activity_bogra_rajshahi.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nano.projectjonobak.BograRajshahi">
+    tools:context="com.nano.projectjonobak.divisions.districts.Bogra">
 
 </android.support.constraint.ConstraintLayout>
