PostActivity & corresponding layouts added.

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,5 +8,9 @@
         app:showAsAction="always"
         />
 
+    <item android:id="@+id/action_settings"
+        android:title="Settings"
+        app:showAsAction="never"
+        />
 
 </menu>
