--- a/app/src/main/res/layout/activity_naogon.xml
+++ b/app/src/main/res/layout/activity_naogon.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nano.projectjonobak.divisions.districts.Joypurhat">
+    tools:context="com.nano.projectjonobak.Naogon">
 
 </android.support.constraint.ConstraintLayout>
