--- a/app/src/main/res/layout/activity_ministries_list.xml
+++ b/app/src/main/res/layout/activity_ministries_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nano.projectjonobak.divisions.DhakaDistrict">
+    tools:context="com.nano.projectjonobak.MinistriesList.">
 
     <LinearLayout
         android:orientation="vertical"
