--- a/app/src/main/res/layout/activity_bogra_rajshahi.xml
+++ b/app/src/main/res/layout/activity_bogra_rajshahi.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.nano.projectjonobak.divisions.districts.Bogra">
 
-    <android.support.v7.app.AlertController.RecycleListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/post_list"></android.support.v7.app.AlertController.RecycleListView>
+        android:id="@+id/post_list"></android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
