List of sylhet districts.

--- a/app/src/main/res/layout/activity_sunamganj_district.xml
+++ b/app/src/main/res/layout/activity_sunamganj_district.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nano.projectjonobak.divisions.districts.Naogon">
+    tools:context="com.nano.projectjonobak.divisions.districts.SunamganjDistrict">
 
 </android.support.constraint.ConstraintLayout>
