--- a/app/src/main/res/layout/activity_chapainawabganj.xml
+++ b/app/src/main/res/layout/activity_chapainawabganj.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.nano.projectjonobak.divisions.districts.Chapainawabganj">
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/post_list"></android.support.v7.widget.RecyclerView>
+
 </android.support.constraint.ConstraintLayout>
