--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -12,5 +12,9 @@
         android:title="Settings"
         app:showAsAction="never"
         />
+    <item android:id="@+id/action_logout"
+        android:title="Log Out"
+        app:showAsAction="never"
+        />
 
 </menu>
